--- a/requirements.txt
+++ b/requirements.txt
@@ -2,15 +2,21 @@ aerich==0.6.3
 aiomysql==0.0.22
 aioredis==2.0.1
 aiosqlite==0.17.0
+amqp==5.1.0
 anyio==3.5.0
 asgiref==3.5.0
 async-timeout==4.0.2
 bcrypt==3.2.0
+billiard==3.6.4.0
 cachetools==5.0.0
+celery==5.2.6
 certifi==2021.10.8
 cffi==1.15.0
 charset-normalizer==2.0.12
 click==8.1.2
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.2.0
 colorama==0.4.4
 cssselect==1.1.0
 cssutils==2.4.0
@@ -18,14 +24,19 @@ dictdiffer==0.9.0
 dnspython==2.2.1
 ecdsa==0.17.0
 email-validator==1.1.3
+eventlet==0.33.0
 fastapi==0.75.1
+greenlet==1.1.2
 h11==0.13.0
 idna==3.3
 iso8601==1.0.2
+kombu==5.2.4
 lxml==4.8.0
 mutagen==1.45.1
 passlib==1.7.4
+Pillow==8.4.0
 premailer==3.10.0
+prompt-toolkit==3.0.29
 py3Fdfs==2.2.0
 pyasn1==0.4.8
 pycparser==2.21
@@ -36,7 +47,9 @@ python-dotenv==0.20.0
 python-jose==3.3.0
 pytz==2022.1
 requests==2.27.1
+ronglian-sms-sdk==1.0.0
 rsa==4.8
+simpel-captcha==0.1.2
 six==1.16.0
 sniffio==1.2.0
 starlette==0.17.1
@@ -45,4 +58,6 @@ tortoise-orm==0.19.0
 typing_extensions==4.1.1
 urllib3==1.26.9
 uvicorn==0.17.6
+vine==5.0.0
+wcwidth==0.2.5
 yagmail==0.15.277
