--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,17 @@
 aerich==0.6.3
+aiohttp==3.8.1
 aiomysql==0.0.22
 aioredis==2.0.1
+aiosignal==1.2.0
 aiosqlite==0.17.0
 amqp==5.1.0
 anyio==3.5.0
 asgiref==3.5.0
 async-timeout==4.0.2
+attrs==21.4.0
 bcrypt==3.2.0
 billiard==3.6.4.0
+black==22.3.0
 cachetools==5.0.0
 celery==5.2.6
 certifi==2021.10.8
@@ -25,22 +29,30 @@ dictdiffer==0.9.0
 distlib==0.3.4
 dnspython==2.2.1
 ecdsa==0.17.0
+elastic-transport==8.1.1
+elasticsearch==7.10.0
 email-validator==1.1.3
 eventlet==0.33.0
 fastapi==0.75.1
 filelock==3.6.0
+frozenlist==1.3.0
 greenlet==1.1.2
 h11==0.13.0
 identify==2.4.12
 idna==3.3
 iso8601==1.0.2
+isort==5.10.1
 kombu==5.2.4
 lxml==4.8.0
+multidict==6.0.2
 mutagen==1.45.1
+mypy-extensions==0.4.3
 nodeenv==1.6.0
 passlib==1.7.4
+pathspec==0.9.0
 Pillow==8.4.0
 platformdirs==2.5.1
+pre-commit==2.18.1
 premailer==3.10.0
 prompt-toolkit==3.0.29
 py3Fdfs==2.2.0
@@ -61,6 +73,7 @@ six==1.16.0
 sniffio==1.2.0
 starlette==0.17.1
 toml==0.10.2
+tomli==2.0.1
 tomlkit==0.10.1
 tortoise-orm==0.19.0
 typing_extensions==4.1.1
@@ -70,3 +83,4 @@ vine==5.0.0
 virtualenv==20.14.0
 wcwidth==0.2.5
 yagmail==0.15.277
+yarl==1.7.2
