doc：elasticsearch更改为单机部署

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,11 +36,20 @@ services:
       - "15672:15672"
       - "5672:5672"
 
+  # 单机部署
   elasticsearch:
     image: "elasticsearch:7.10.1"
     restart: always
     volumes:
-      - ./elasticsearch/config:/usr/share/elasticsearch/config
+      - ./es/config:/usr/share/es/config
     ports:
       - "9200:9200"
+    environment:
+      -  "discovery.type=single-node"
+
+  kinbana:
+    image: "kibana:7.10.1"
+    restart: always
+    ports:
+    - "5601:5601"
 
