--- a/requirements.txt
+++ b/requirements.txt
@@ -23,19 +23,20 @@ click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.2.0
 colorama==0.4.4
+construct==2.5.3
 cssselect==1.1.0
 cssutils==2.4.0
 dictdiffer==0.9.0
 distlib==0.3.4
 dnspython==2.2.1
 ecdsa==0.17.0
-elastic-transport==8.1.1
-elasticsearch==7.10.0
+elasticsearch==7.10.1
 email-validator==1.1.3
 eventlet==0.33.0
 fastapi==0.75.1
 filelock==3.6.0
 frozenlist==1.3.0
+future==0.18.2
 greenlet==1.1.2
 h11==0.13.0
 identify==2.4.12
@@ -50,9 +51,9 @@ mypy-extensions==0.4.3
 nodeenv==1.6.0
 passlib==1.7.4
 pathspec==0.9.0
+pefile==2021.9.3
 Pillow==8.4.0
 platformdirs==2.5.1
-pre-commit==2.18.1
 premailer==3.10.0
 prompt-toolkit==3.0.29
 py3Fdfs==2.2.0
@@ -61,8 +62,10 @@ pycparser==2.21
 pydantic==1.9.0
 PyMySQL==0.9.3
 pypika-tortoise==0.1.4
+python-dateutil==2.8.2
 python-dotenv==0.20.0
 python-jose==3.3.0
+python-ptrace==0.9.8
 pytz==2022.1
 PyYAML==6.0
 requests==2.27.1
@@ -80,7 +83,6 @@ typing_extensions==4.1.1
 urllib3==1.26.9
 uvicorn==0.17.6
 vine==5.0.0
-virtualenv==20.14.0
 wcwidth==0.2.5
 yagmail==0.15.277
 yarl==1.7.2
